<resources>
    <string name="app_name">KodakMoments2Lib</string>
    <string name="contentDescription">image_contentDescription</string>
    <string name="from">from</string>
    <string name="Common_Prints">Prints</string>
    <string name="Common_Settings">Settings</string>
    <string name="Common_Next">Next</string>
    <string name="Common_Cancel">Cancel</string>
    <string name="Common_OK">OK</string>
    <string name="Common_Edit">Edit</string>
    <string name="Common_Delete">Delete</string>
    <string name="Common_Apply">Apply</string>
    <string name="Common_Yes">Yes</string>
    <string name="Common_please_wait">Please wait...</string>
    <string name="error_cannot_connect_to_internet">Your internet connection is weak, please try another location or network.</string>
    <string name="error_server">Oops, our servers hiccupped, wait a minute and try again.</string>
    <string name="Task_No_Internet">3G/4G or Wi-Fi not available, verify your connection.</string>
    <string name="Common_Done">Done</string>
    <string name="splash_moments">Moments</string>
    <string name="KMTopScreen_Welcome1">Welcome</string>
    <string name="KMTopScreen_Welcome2">Welcome</string>
    <string name="KMTopScreen_Welcome3">Welcome</string>
    <string name="KMTopScreen_WelcomeDescription1">Bring together all your pictures from different online accounts.</string>
    <string name="KMTopScreen_WelcomeDescription2">Taking perfect shots is just one tap away with the new Capture.</string>
    <string name="KMTopScreen_WelcomeDescription3">Ordering prints is just as easy from the road as it is from your sofa.</string>
     <string name="Link_Accounts">Link accounts</string>
     <string name="Link_photos">Link your photos</string>
     <string name="Link_info_top">Have instant access to your photos.</string>
     <string name="Link_info_bottom">Tap to link your online accounts with Moments.</string>
     <string name="Link_facebook">Facebook</string>
     <string name="Link_instagram">Instagram</string>
     <string name="Link_flickr">Flickr</string>
     <string name="Link_dropbox">Dropbox</string>
    <string name="KMTopScreen_GettingStarted">Get Started</string>
    <string name="KMTopScreen_LinkYourPhotos">Link Accounts</string>
    <string name="TitlePage_Error_NoCatalog">Please wait while product data is downloaded.</string>
    <string name="TitlePage_Error_App_Obsolete">This application needs to be updated.</string>
    <string name="HomeScreen_More_Kodak_Products">More great Kodak products.</string>
    <string name="KMProductChoice_CartBannerTitle">You have products in your cart!</string>
    <string name="TitlePage_Prints_Enlargements">Prints</string>
    <string name="TitlePage_WifiConnect">Kiosk Connect</string>
    <string name="ImageSelection_Camera">Camera</string>
    <string name="ImageSelection_Album">Albums</string>
    <string name="ImageSelection_EmptyPhoto_Alert">\n\n\nNo pictures found on the device,please load picture.</string>
    <string name="ImageSelection_AlertButton_OK">OK</string>
    <string name="ImageSelection_Facebook">Facebook</string>
    <string name="ImageSelection_Flickr">Flickr</string>
    <string name="ImageSelection_Instagram">Instagram</string>
    <string name="ImageSelection_Dropbox">Dropbox</string>
    <string name="ImageSelection_album_photos_count">%d Photos</string>
    <string name="ImageSelection_DeleteProducts">This picture is used in multiple products in your cart. Are you sure you want to remove these?</string>
    <string name="ImageSelection_Start_Over">Start Over</string>
    <string name="ImageSelection_Start_Over_LoseAllWork">Are you sure you want to start over? You will lose all your work.</string>
    <string name="PrintSize_Select_DefaultSize">Select size</string>
    <string name="review_title">Review Prints</string>
	<string name="change_all_size">Change all print sizes</string>
	<string name="select_sizes">select print size</string>
	<string name="PrintReview_AddPrintSize">Add sizes</string>
	<string name="photoReview_tip_text">Change or add sizes and quantities for each photo. Tap on a photo for extra editing options.</string>
	<string name="printToalt_text">Prints</string>
	<string name="cart">Cart</string>
	<string name="KMReviewPrints_SelectSize">Select print sizes</string>
	<string name="changeAllSize_title_one">Select multiple formats for your photo</string>
	<string name="changeAllSize_title_two">Select multiple formats for your %% photos</string>
    <string name="image_edit">Edit</string>
    <string name="save">Save</string>
    <string name="image_ok">OK</string>
    <string name="image_cancel">Cancel</string>
    <string name="image_yes">Yes</string>
    <string name="image_no">No</string>
    <string name="image_pinkish_filter">Pinkish Filter</string>
    <string name="image_load_wrong">\n\n\nThere was a problem.Try again.</string>
    <string name="image_lowResWarning">\n\nLow Resolution Warning:\nIf Poor quality is printed.Try zooming out or choose a different picture.</string>
    <string name="image_backWarning">\n\n\nDo you want to save your changes?</string>
    <string name="KMMenu_Home">Home</string>
    <string name="KMMenu_Orders">Orders</string>
    <string name="KMMenu_Profile">Profile</string>
    <string name="KMMenu_Settings">Settings</string>
    <string name="KMMenu_Address">Address</string>
    <string name="KMMenu_Cart">Cart</string>
    <string name="KMMenu_ClearCart">Clear Cart</string>
    <string name="KMMenu_Information">Personal Details</string>
    <string name="KMMenu_NoOrdersPlaced">You have no completed orders.</string>
    <string name="KMMenu_OrdersPlaced">Placed Orders</string>
    <string name="KMMenu_OrderDetails">Order Details</string>
    <string name="KMMenu_SelectedStore">Selected Store</string>
    <string name="KMMenu_Country">Current Country</string>
    <string name="KMMenu_Legal">Legal</string>
    <string name="KMMenu_About">About</string>
    <string name="KMMenu_Gallery">Gallery</string>
    <string name="SettingsScreen_SelectCountry">Select Country</string>
    <string name="KMTopScreen_Location_Not_Determined">Your Location could not be automatically determined.\n\nPlease select your country from the list.</string>
    <string name="KMMenu_Country_DialogMessage">Please select your country from the list.</string>
    <string name="KMMenu_Country_SaveMessage">Your country selection will take effect the next time you start the app.</string>
    <string name="Settings_LastStoreUsed">Last Store Used</string>
    <string name="Settings_about">About</string>
    <string name="Settings_country">Country</string>
    <string name="Settings_legal">Legal</string>
    <string name="Version_String">Version</string>
    <string name="Copyright_String">TM/MC/MR Licensed from Eastman Kodak Company: Kodak, Kodak Moment and Kodak trade dress. © 2014 Kodak Alaris Inc.</string>
    <string name="SettingsScreen_View3rdPartyAgreements">Third Party Agreements:</string>
    <string name="SettingsScreen_View">View</string>
    <string name="SettingScreen_Agree">Agree</string>
    <string name="EulaPrivacy_title">Terms and conditions</string>
    <string name="EulaPrivacy_agree">Agree</string>
    <string name="EULAScreen_Title">License Agreement</string>
    <string name="EULAScreen_AgreeToEULA">Agree to Terms?</string>
    <string name="FindStore_selectDeliveryMethod">Select a delivery method</string>
    <string name="FindStore_deliverToAddress">deliver to this address</string>
    <string name="FindStore_firstName">Fisrt Name</string>
    <string name="FindStore_lastName">Last Name</string>
    <string name="FindStore_address1">Address 1</string>
    <string name="FindStore_address2">Address 2</string>
    <string name="FindStore_City">City</string>
    <string name="FindStore_postalCode">Postal Code</string>
    <string name="FindStore_search">City or Zip</string>
    <string name="FindStore_pickUpInStore">Pick up in Store</string>
    <string name="FindStore_ShipToHome">Ship to Home</string>
    <string name="FindStore_deliveryMethod">Delivery Method</string>
    <string name="FindStore_findAStore">find a store</string>
    <string name="FindStore_or">or</string>
    <string name="FindStore_Miles">mi</string>
    <string name="FindStore_KM">km</string>
    <string name="FindStore_state">State</string>
    <string name="Eroor_Container">Enter the required shipping information</string>
    <string name="KioskScanConnect_title">Scan Connect</string>
    <string name="KioskScanConnect_scanconnectinstruction">Scan the code provided on the Kiosk.</string>
    <string name="KioskScanConnect_scanconnectfail">Code scanning has failed. Please use manual connection.</string>
    <string name="KioskScanConnect_scanconnectedtokiosk">Connected to the Kiosk:</string>
    <string name="KioskScanConnect_scanconnectingtokiosk">Connecting to the Kiosk:</string>
    <string name="KioskScanConnect_TakingTooLong">Taking too long?</string>
    <string name="KioskScanConnect_notavalidbarcode">Unable to read QR code.  Please choose Manual Connect.</string>
    <string name="KioskScanConnect_notavalidkodakwirelessnetwork">Unable to read QR code.  Please choose Manual Connect.</string>
    <string name="KioskScanConnect_disablePoorNetworkAvoidance">Auto Network Switching blocks Kiosk communication, please disable the Auto Network switch setting.</string>
    <string name="KioskManualInput_ssid">"Wifi name: "</string>
    <string name="KioskManualInput_password">Password:</string>
    <string name="KioskManualInput_connect">Connect</string>
    <string name="KioskManualInput_validwifiinfo">Please verify the network name and password match the Kiosk screen.  Please try again.</string>
    <string name="KioskManualInput_ManualConnect">Manual Connect</string>
    <string name="ManualConnectInstructions">Type in the code provided on the kiosk.</string>
    <string name="KioskManualInput_ChooseDialogTitle">Choose Kiosk Connection</string>
    <string name="KioskManualInput_nonetworkfound">No Kiosk networks found. Please contact store clerk for assistance.</string>
    <string name="KioskManualInput_nonetworkfound_short">No Kiosk networks found.</string>
    <string name="KioskManualInput_selectKiosk">Select Kiosk</string>
    <string name="KioskConnection_Title">Connected to the Kiosk</string>
    <string name="KioskConnection_LookAtKisok">Please look at the Kiosk</string>
    <string name="KioskConnection_SendingTaggedSetOnly">Sending selected set only</string>
    <string name="KioskConnection_DoNotTouch">Please do not use your device during this operation</string>
    <string name="ShoppingCart_title">Your order</string>
    <string name="ShoppingCart_cancelOrder">Cancel order</string>
    <string name="ShoppingCart_placeOrder">Place order</string>
    <string name="ShoppingCart_orderSubTotal">Order subtotal*</string>
    <string name="ShoppingCart_taxesAddedWhenPickUp">*Taxes will be added to your order when you pick up</string>
    <string name="ShoppingCart_taxesAddedWhenPayment">*Taxes will be added to your order during payment</string>
    <string name="ContactDetails_title">Contact Details</string>
    <string name="ContactDetails_editContactDetails">Edit your contact details</string>
    <string name="ContactDetails_detailsTips">Kodak Alaris will use your details to contact you about your order.</string>
    <string name="ContactDetails_firstname">First Name</string>
    <string name="ContactDetails_lastname">Last Name</string>
    <string name="ContactDetails_email">E-Mail</string>
    <string name="ContactDetails_phone">Phone</string>
    <string name="ContactDetails_error_text">Error text</string>
    <string name="ContactDetails_error_text_email">E-mail format is incorrect, please correct. e.g. JohnDoe@company.com.</string>
    <string name="ContactDetails_error_text_phone">Enter the required contact information</string>
</resources>