<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="45.34dp" >

    <ImageView
        android:id="@+id/img_findStore_back"
        android:layout_width="45.34dp"
        android:layout_height="45.34dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/contentDescription"
        android:src="@drawable/icon_back" />

    <TextView
        android:id="@+id/tv_findStore_method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/FindStore_deliveryMethod" />

    <Button
        android:id="@+id/btn_findStore_save"
        android:layout_width="45.34dp"
        android:layout_height="45.34dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@null"
        android:text="@string/save"
        android:textColor="@color/kodak_red"
        android:textSize="@dimen/text_links_font_size" />

</RelativeLayout>