<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <com.kodakalaris.kodakmomentslib.widget.Carousel
        android:id="@+id/carousel_intro_t_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        />

    
    <ImageView android:id="@+id/img_intro_t_splash"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:src="@drawable/splash_animation_sm"
               android:layout_marginTop="50dp"
               android:layout_marginLeft="80dp"
               android:contentDescription="@string/contentDescription"/>
    
    <TextView 
        android:id="@+id/txt_intro_t_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/h1_font_size"
        android:textColor = "@color/white"
        android:text="@string/KMTopScreen_Welcome1"
        android:layout_below="@+id/img_intro_t_splash"
        android:layout_marginTop="25dp"
        android:layout_alignLeft="@+id/img_intro_t_splash"
        ></TextView>
    
      <TextView 
        android:id="@+id/txt_intro_t_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="280dp"
        android:textSize="@dimen/h2_font_size"
        android:textColor = "@color/white"
        android:text="@string/KMTopScreen_WelcomeDescription1"
        android:layout_marginTop="10dp"
        android:layout_alignLeft="@+id/txt_intro_t_welcome"
        android:layout_below="@+id/txt_intro_t_welcome"
        ></TextView>
       <LinearLayout
        android:id="@+id/lineLy_intro_t_dotsSet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_intro_t_info"
        android:layout_below="@+id/txt_intro_t_info"
        android:orientation="horizontal"
        android:layout_marginTop="16dp" >
    </LinearLayout>
      
      <TextView
        android:id="@+id/txt_intro_t_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:text="@string/KMTopScreen_LinkYourPhotos" 
        style="@style/text_links_simple_light"/>
    <Button
        android:id="@+id/btn_intro_t_start"
        android:layout_width="280dp"
        android:layout_height="46dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_above="@+id/txt_intro_t_link"
        android:layout_marginBottom="23dp"
        android:text="@string/KMTopScreen_GettingStarted"
        style="@style/primary_button_start"
        />
      <!--   -->
         

</RelativeLayout>
