<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.kodakalaris.kodakmomentslib.widget.mobile.MActionBar
        android:id="@+id/actionbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:left_button_image_src="@drawable/icon_back"
        app:right_button_text_src="@string/save"
        app:title_text="@string/ContactDetails_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/actionbar" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="39.3dp"
            android:layout_marginRight="39.3dp"
            >

            <TextView
                android:id="@+id/txt_title"
                style="@style/subheadline_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32.7dp"
                android:text="@string/ContactDetails_editContactDetails"
                android:textColor="@color/near_black" />

            <TextView
                android:id="@+id/txt_subtitile"
                style="@style/body_copy_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_title"
                android:layout_marginTop="9.3dp"
                android:text="@string/ContactDetails_detailsTips"
                android:textColor="@color/grey" />

            <EditText
                android:id="@+id/etxt_firstname"
                style="@style/h2_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_subtitile"
                android:layout_marginTop="45.3dp"
                android:singleLine="true"
                android:inputType="textPersonName"
                android:imeOptions="actionNext"
                android:background="@null"
                android:hint="@string/ContactDetails_firstname" />
            
            <View 
                android:id="@+id/line_etxt_firstname"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/etxt_firstname"
                android:layout_marginTop="11.3dp"
                android:background="@color/medium_grey_50alpha"
                />
            
            <LinearLayout 
                android:id="@+id/linely_error_firstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_below="@id/line_etxt_firstname"
                android:visibility="gone"
                >
                <ImageView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:src="@drawable/icon_alert"
                    />
                <TextView 
                    style="@style/body_copy_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginLeft="9.3dp"
                    android:textColor="@color/error_blue"
                    android:text="@string/ContactDetails_error_text"
                    />
            </LinearLayout>

            <EditText
                android:id="@+id/etxt_lastname"
                style="@style/h2_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/line_etxt_firstname"
                android:layout_marginTop="45.3dp"
                android:singleLine="true"
                android:inputType="textPersonName"
                android:imeOptions="actionNext"
                android:background="@null"
                android:hint="@string/ContactDetails_lastname" />
            
            <View 
                android:id="@+id/line_etxt_lastname"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/etxt_lastname"
                android:layout_marginTop="11.3dp"
                android:background="@color/medium_grey_50alpha"
                />
            
            <LinearLayout 
                android:id="@+id/linely_error_lastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_below="@id/line_etxt_lastname"
                android:visibility="gone"
                >
                <ImageView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:src="@drawable/icon_alert"
                    />
                <TextView 
                    style="@style/body_copy_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginLeft="9.3dp"
                    android:textColor="@color/error_blue"
                    android:text="@string/ContactDetails_error_text"
                    />
            </LinearLayout>

            <EditText
                android:id="@+id/etxt_email"
                style="@style/h2_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/line_etxt_lastname"
                android:layout_marginTop="45.3dp"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:background="@null"
                android:hint="@string/ContactDetails_email" />
            
            <View 
                android:id="@+id/line_etxt_email"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/etxt_email"
                android:layout_marginTop="11.3dp"
                android:background="@color/medium_grey_50alpha"
                />
            
            <LinearLayout 
                android:id="@+id/linely_error_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_below="@id/line_etxt_email"
                android:visibility="gone"
                >
                <ImageView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:src="@drawable/icon_alert"
                    />
                <TextView 
                    style="@style/body_copy_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginLeft="9.3dp"
                    android:textColor="@color/error_blue"
                    android:text="@string/ContactDetails_error_text_email"
                    />
            </LinearLayout>

            <EditText
                android:id="@+id/etxt_phone"
                style="@style/h2_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/line_etxt_email"
                android:layout_marginTop="45.3dp"
                android:singleLine="true"
                android:inputType="phone"
                android:imeOptions="actionDone"
                android:background="@null"
                android:hint="@string/ContactDetails_phone" />
            
            <View 
                android:id="@+id/line_etxt_phone"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/etxt_phone"
                android:layout_marginTop="11.3dp"
                android:background="@color/medium_grey_50alpha"
                />
            
            <LinearLayout 
                android:id="@+id/linely_error_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_below="@id/line_etxt_phone"
                android:visibility="gone"
                >
                <ImageView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:src="@drawable/icon_alert"
                    />
                <TextView 
                    style="@style/body_copy_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginLeft="9.3dp"
                    android:textColor="@color/error_blue"
                    android:text="@string/ContactDetails_error_text_phone"
                    />
            </LinearLayout>
            
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
