<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageButton
        android:id="@+id/ib_logo"
        android:layout_width="wrap_content"
        android:layout_height="24.7dp"
        android:layout_marginLeft="8.7dp"
        android:layout_marginTop="25.3dp"
        android:background="@null"
        android:src="@drawable/logo_kodakmoments" />

    <TextView
        android:id="@+id/tv_version"
        style="@style/navigation_text"
        android:layout_width="281.3dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/ib_logo"
        android:layout_marginLeft="39.3dp"
        android:layout_marginTop="25.3dp"
        android:gravity="left|top"
        android:text="Version:"
        android:textColor="@color/near_black" />
    
    <TextView
        android:id="@+id/tv_copyright"
        style="@style/small_button_text"
        android:layout_width="281.3dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_version"
        android:layout_marginLeft="39.3dp"
        android:layout_marginTop="26.7dp"
        android:gravity="left|top"
        android:text="@string/Copyright_String"
        android:textColor="@color/near_black" />
    
    <TextView
        android:id="@+id/tv_thirdparty"
        style="@style/small_button_text"
        android:layout_width="281.3dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_copyright"
        android:layout_marginLeft="39.3dp"
        android:layout_marginTop="47.3dp"
        android:gravity="left|top"
        android:text="@string/SettingsScreen_View3rdPartyAgreements"
        android:textColor="@color/near_black" />
    
    <TextView
        android:id="@+id/tv_view"
        style="@style/text_links_text"
        android:layout_width="281.3dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_thirdparty"
        android:layout_marginLeft="39.3dp"
        android:layout_marginTop="6dp"
        android:gravity="left|top"
        android:text="@string/SettingsScreen_View"
        android:textColor="@color/kodak_red" />
	
</RelativeLayout>